kubernetes-gitops/demo_ingress_rule.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/acme-challenge-type: http01
  name: demo
  namespace: demo
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - shamrockoo4tune.ru
    secretName: https-shamrockoo4tune.ru
  rules:
  - host: shamrockoo4tune.ru
    http:
      paths:
      - backend:
          service:
            name: demo
            port:
              number: 80
        path: /demo(/|$)(.*)
        pathType: Prefix
...
